Ejercicio_MOngo.txt

test> show collections
Personas
test> use Perdonas
switched to db Perdonas
Perdonas> db.createCollection ("personas", {})
{ ok: 1 }
Perdonas> db.personas.insertMany([{nombre:Juan, Edad:29, Ciudad:"Bogotá"},{nombre:"Julia", Edad:31, Ciudad:"Santander"},{nombre:"Arelis", Edad:30, Ciudad:"Cali"}])
ReferenceError: Juan is not defined
Perdonas> db.personas.insertMany([{nombre:"Juan", Edad:29, Ciudad:"Bogotá"},{nombre:"Julia", Edad:31, Ciudad:"Santander"},{nombre:"Arelis", Edad:30, Ciudad:"Cali"}])
{
  acknowledged: true,
  insertedIds: {
    '0': ObjectId("6528a1797899f24a4c45b71c"),
    '1': ObjectId("6528a1797899f24a4c45b71d"),
    '2': ObjectId("6528a1797899f24a4c45b71e")
  }
}
Perdonas> db.personas.find ()
[
  {
    _id: ObjectId("6528a1797899f24a4c45b71c"),
    nombre: 'Juan',
    Edad: 29,
    Ciudad: 'Bogotá'
  },
  {
    _id: ObjectId("6528a1797899f24a4c45b71d"),
    nombre: 'Julia',
    Edad: 31,
    Ciudad: 'Santander'
  },
  {
    _id: ObjectId("6528a1797899f24a4c45b71e"),
    nombre: 'Arelis',
    Edad: 30,
    Ciudad: 'Cali'
  }
]
Perdonas> db.personas.find({Edad:{$gt:25}})
[
  {
    _id: ObjectId("6528a1797899f24a4c45b71c"),
    nombre: 'Juan',
    Edad: 29,
    Ciudad: 'Bogotá'
  },
  {
    _id: ObjectId("6528a1797899f24a4c45b71d"),
    nombre: 'Julia',
    Edad: 31,
    Ciudad: 'Santander'
  },
  {
    _id: ObjectId("6528a1797899f24a4c45b71e"),
    nombre: 'Arelis',
    Edad: 30,
    Ciudad: 'Cali'
  }
]
Perdonas> db.personas.find({Edad:{$lt:25}})

Perdonas> db.personas.find({nombre:{$eq:"Juan"}})
[
  {
    _id: ObjectId("6528a1797899f24a4c45b71c"),
    nombre: 'Juan',
    Edad: 29,
    Ciudad: 'Bogotá'
  }
]
Perdonas> db.personas.updateOne({Edad:29},{Edad:31})
MongoInvalidArgumentError: Update document requires atomic operators
Perdonas> db.personas.updateOne ({nombre:"Juan"}, {$set:{Edad:31}})
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 1,
  upsertedCount: 0
}
Perdonas> db.personas.find()
[
  {
    _id: ObjectId("6528a1797899f24a4c45b71c"),
    nombre: 'Juan',
    Edad: 31,
    Ciudad: 'Bogotá'
  },
  {
    _id: ObjectId("6528a1797899f24a4c45b71d"),
    nombre: 'Julia',
    Edad: 31,
    Ciudad: 'Santander'
  },
  {
    _id: ObjectId("6528a1797899f24a4c45b71e"),
    nombre: 'Arelis',
    Edad: 30,
    Ciudad: 'Cali'
  }
]
Perdonas> db.personas.find ({Edad:{$gt:25, $lt:31}})
[
  {
    _id: ObjectId("6528a1797899f24a4c45b71e"),
    nombre: 'Arelis',
    Edad: 30,
    Ciudad: 'Cali'
  }
]
Perdonas> db.personas.find ({Edad:{$gt:25, $lt:31}, Ciudad:{$eq:"Nueva York"}})

Perdonas> db.personas.find ({$or:[{Edad:{$gt:25, $lt:31}, Ciudad:{$eq:"Nueva York"}}]})

Perdonas> db.personas.find ({$or:[{Edad:{$gt:25, $lt:31}}, {Ciudad:{$eq:"Nueva York"}}}]})
Uncaught:
SyntaxError: Unexpected token, expected "," (1:76)

> 1 | db.personas.find ({$or:[{Edad:{$gt:25, $lt:31}}, {Ciudad:{$eq:"Nueva York"}}}]})
    |                                                                             ^
  2 |

Perdonas> db.personas.find ({$or:[{Edad:{$gt:25, $lt:31}}, {Ciudad:{$eq:"Nueva York"}}]})
[
  {
    _id: ObjectId("6528a1797899f24a4c45b71e"),
    nombre: 'Arelis',
    Edad: 30,
    Ciudad: 'Cali'
  }
]
Perdonas> db.personas.updataMany ({Edad:{$gt:25, $lt:31}, Ciudad:{$eq:"Nueva York"}}, {$set:{Ciudad:"Los Angeles"}})
TypeError: db.personas.updataMany is not a function
Perdonas> db.personas.updateMany ({Edad:{$gt:25, $lt:31}, Ciudad:{$eq:"Nueva York"}}, {$set:{Ciudad:"Los Angeles"}})
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 0,
  modifiedCount: 0,
  upsertedCount: 0
}
Perdonas>